--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next-build && next export",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
