--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@heroicons/react": "^1.0.6",
     "@reduxjs/toolkit": "^1.9.5",
+    "@sentry/nextjs": "^7.58.1",
     "@stripe/stripe-js": "^1.54.1",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
