--- a/package.json
+++ b/package.json
@@ -1,25 +1,24 @@
 {
   "name": "cm-website",
   "version": "0.1.0",
-  "homepage": "https://github.com/Manganese92/Innovalia",
+  "homepage": "https://github.com/CadenEras/Innovalia-front",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Manganese92/Innovalia"
+    "url": "https://github.com/CadenEras/Innovalia-front"
   },
   "bugs": {
-    "url": "https://github.com/Manganese92/Innovalia/issues"
+    "url": "https://github.com/CadenEras/Innovalia-front/issues"
   },
   "contributors": [
     "Morgane REGNAUT (Manganese92)",
-    "Melissa GRIES (CadenEras)",
-    "Gilles KOUNKOUD (GillesKND)"
+    "Melissa GRIES (CadenEras)"
   ],
   "engines": {
     "node": ">=18.16.0",
     "npm": ">=9.5.1"
   },
   "main": "pages/index.js",
-  "private": true,
+  "private": false,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
