--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.6.1",
+    "@edge-runtime/cookies": "^3.2.2",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
@@ -55,7 +56,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
     "sass": "^1.62.1",
-    "swr": "^2.1.5",
+    "swr": "^2.2.0",
     "use-sound": "^4.0.1",
     "validator": "^13.9.0",
     "vite": "^4.0.0"
